@@ -35,31 +35,31 @@ class TestRDocMarkupToHtml < RDoc::Markup::FormatterTestCase
   end
 
   def accept_heading
-    assert_equal "\n<h5>Hello</h5>\n", @to.res.join
+    assert_equal "\n<h5 id=\"label-Hello\">Hello</h5>\n", @to.res.join
   end
 
   def accept_heading_1
-    assert_equal "\n<h1>Hello</h1>\n", @to.res.join
+    assert_equal "\n<h1 id=\"label-Hello\">Hello</h1>\n", @to.res.join
   end
 
   def accept_heading_2
-    assert_equal "\n<h2>Hello</h2>\n", @to.res.join
+    assert_equal "\n<h2 id=\"label-Hello\">Hello</h2>\n", @to.res.join
   end
 
   def accept_heading_3
-    assert_equal "\n<h3>Hello</h3>\n", @to.res.join
+    assert_equal "\n<h3 id=\"label-Hello\">Hello</h3>\n", @to.res.join
   end
 
   def accept_heading_4
-    assert_equal "\n<h4>Hello</h4>\n", @to.res.join
+    assert_equal "\n<h4 id=\"label-Hello\">Hello</h4>\n", @to.res.join
   end
 
   def accept_heading_b
-    assert_equal "\n<h1><b>Hello</b></h1>\n", @to.res.join
+    assert_equal "\n<h1 id=\"label-Hello\"><b>Hello</b></h1>\n", @to.res.join
   end
 
   def accept_heading_suppressed_crossref
-    assert_equal "\n<h1>Hello</h1>\n", @to.res.join
+    assert_equal "\n<h1 id=\"label-Hello\">Hello</h1>\n", @to.res.join
   end
 
   def accept_list_end_bullet
@@ -302,7 +302,7 @@ class TestRDocMarkupToHtml < RDoc::Markup::FormatterTestCase
 
     @to.accept_heading @RM::Heading.new(7, 'Hello')
 
-    assert_equal "\n<h6>Hello</h6>\n", @to.res.join
+    assert_equal "\n<h6 id=\"label-Hello\">Hello</h6>\n", @to.res.join
   end
 
   def test_convert_string
@@ -357,6 +357,10 @@ verb2</pre>
 
   def test_to_html
     assert_equal "\n<p><tt>--</tt></p>\n", util_format("<tt>--</tt>")
+  end
+
+  def test_to_label
+    assert_equal '--', @to.to_label('<tt>--</tt>')
   end
 
   def util_format text
