@@ -4,6 +4,13 @@
   * RDoc supports RD format documentation.
 
 * Minor enhancements
+  * HTML headings now have ids matching their titles.
+
+      = Hello!
+
+    Is rendered as
+
+      <h1 id="label-Hello%21">Hello!</h1>
   * RDoc now looks for a <tt>format: parser_name</tt> magic comment to choose
     alternate documentation formats.  The format comment must be in the first
     three lines of the file (to allow for a shebang or modeline).
